# STT-MCP

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: SETUP.md
src/stt_mcp/: __init__.py  artifacts.py  backend.py  cli.py  configuration.py  contracts.py  cuda_capacity.py  engine_factory.py  hardware.py  media.py  model.py  parakeet.py  registration.py  runtime_policy.py  server.py  service.py  setup_cli.py  supervisor.py  transcript.py  worker.py  worker_protocol.py
tests/: test_backend_configuration.py  test_cuda_capacity.py  test_mcp_acceptance.py  test_media_integration.py  test_model_adapter.py  test_parakeet_engine.py  test_registration.py  test_runtime_policy.py  test_setup_cli.py  test_transcript_outputs.py  test_worker_protocol.py
typings/pynvml/: __init__.pyi
typings/transformers/: __init__.pyi
typings/typer/: __init__.pyi
