[project]
name = "stt-mcp"
version = "0.1.0"
description = "Local speech-to-text MCP server powered by Granite Speech or parakeet.cpp"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anyio==4.14.2",
    "filelock==3.32.0",
    "mcp[cli]==1.28.1",
    "pydantic==2.13.4",
    "rich==15.0.0",
    "typer==0.27.0",
]

[project.optional-dependencies]
granite = [
    "accelerate==1.14.0",
    "flash-attn==2.8.3 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "huggingface-hub==1.24.0",
    "ninja==1.13.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "nvidia-ml-py==13.610.43",
    "safetensors==0.8.0",
    "soundfile==0.14.0",
    "torch==2.9.1 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchaudio==2.9.1 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "transformers==5.14.1",
]

[project.scripts]
stt-mcp = "stt_mcp.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright==1.39.9",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
    "ty==0.0.62",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stt_mcp"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.8.3"
requires-dist = ["einops", "torch"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.basedpyright]
typeCheckingMode = "all"
stubPath = "typings"
pythonVersion = "3.13"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src", "typings"]
python_version = "3.13"
strict = true

[tool.ty.environment]
python = ".venv"
root = ["./src"]
python-version = "3.13"
python-platform = "all"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D105",
    "D107",
    "D203",
    "D213",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "D", "PLR2004", "S101", "S108", "SLF001"]
"tests/test_setup_cli.py" = ["S603"]
"src/stt_mcp/engine_factory.py" = ["PLC0415"]
"typings/**/*.pyi" = ["N802"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
